--- a/gpg.conf
+++ b/gpg.conf
@@ -27,19 +27,26 @@ allow-freeform-uid
 # display long key IDs
 keyid-format 0xlong
 
+# Do not merge primary user ID and primary key and print all timestamps as seconds since 1970-01-01.
+fixed-list-mode
+
+# List all keys (or the specified ones) along with their fingerprints.
+fingerprint
+
+# Display the calculated validity of user IDs during key listings.
+list-options show-uid-validity
+verify-options show-uid-validity
 
 #-----------------------------
 # keyserver
 #-----------------------------
 
 # GnuPG can send and receive keys to and from a keyserver
-keyserver hkps://keys.mayfirst.org
-#keyserver hkps://2eghzlv2wwcq7u7y.onion
+keyserver hkps://hkps.pool.sks-keyservers.net
 
 # Provide a certificate store to override the system default
-# https://support.mayfirst.org/raw-attachment/wiki/faq/security/mfpl-certificate-authority/mfpl.crt
-keyserver-options ca-cert-file=/usr/local/etc/ssl/certs/mayfirst.org.pem
-#keyserver-options ca-cert-file=/etc/ssl/certs/cacert.org.pem
+# https://sks-keyservers.net/sks-keyservers.netCA.pem
+keyserver-options ca-cert-file=/usr/local/etc/ssl/certs/hkps.pool.sks-keyservers.net.pem
 
 # Set the proxy to use for HTTP and HKP keyservers
 keyserver-options http-proxy=socks5-hostname://127.0.0.1:9050
