add with-fingerprint, fix trailing dots

--- a/gpg.conf
+++ b/gpg.conf
@@ -3,7 +3,7 @@
 #-----------------------------
 
 # If this option is not used, the default key is the first key found in the
-# secret keyring.
+# secret keyring
 
 default-key 0xCBB15A68EF3AC804875D5C4E153FE398821C8394	# ilf
 
@@ -27,10 +27,13 @@ allow-freeform-uid
 # display long key IDs
 keyid-format 0xlong
 
-# Do not merge primary user ID and primary key and print all timestamps as seconds since 1970-01-01.
+# List all keys (or the specified ones) along with their fingerprints
+with-fingerprint
+
+# Do not merge primary user ID and primary key and print all timestamps as seconds since 1970-01-01
 fixed-list-mode
 
-# Display the calculated validity of user IDs during key listings.
+# Display the calculated validity of user IDs during key listings
 list-options show-uid-validity
 verify-options show-uid-validity
 
@@ -56,7 +59,7 @@ keyserver-options no-try-dns-srv
 keyserver-options no-honor-keyserver-url
 
 # This option enables the automatic retrieving of keys from a keyserver when
-# verifying signatures made by keys that are not on the local keyring.
+# verifying signatures made by keys that are not on the local keyring
 keyserver-options auto-key-retrieve
 
 # include keys that are marked on the keyserver as disabled
@@ -77,6 +80,6 @@ personal-digest-preferences SHA512
 # message digest algorithm used when signing a key
 cert-digest-algo SHA512
 
-# Set the list of default preferences to string.
+# Set the list of default preferences to string
 # used for new keys and default for "setpref"
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
