gpg.conf updates

--- a/gpg.conf
+++ b/gpg.conf
@@ -2,46 +2,39 @@
 # default key
 #-----------------------------
 
-# If this option is not used, the default key is the first key found in the
-# secret keyring
+# Use name as the default key to sign with. If this option is not used, the
+# default key is the first key found in the secret keyring
 
-default-key 0xCBB15A68EF3AC804875D5C4E153FE398821C8394	# ilf
+#default-key 0x80615870F5BAD690333686D0F2AD85AC1E42B367
 
 
 #-----------------------------
 # behavior
 #-----------------------------
 
-# disable the initial copyright message
-no-greeting
-
-# disable inclusion of the version string in ASCII armored output
-no-emit-version
-
-# disable comment string in clear text signatures and ASCII armored messages
-no-comments
-
-# disable all checks on the form of the user ID while generating a new one
+# Disable all checks on the form of the user ID while generating a new one
 allow-freeform-uid
 
-# display long key IDs
+# Display long key IDs
 keyid-format 0xlong
 
 # List all keys (or the specified ones) along with their fingerprints
 with-fingerprint
 
-# Do not merge primary user ID and primary key and print all timestamps as seconds since 1970-01-01
-fixed-list-mode
-
 # Display the calculated validity of user IDs during key listings
 list-options show-uid-validity
 verify-options show-uid-validity
+
+# Disable inclusion of the version string in ASCII armored output
+no-emit-version
+
 
 #-----------------------------
 # keyserver
 #-----------------------------
 
-# GnuPG can send and receive keys to and from a keyserver
+# This is the server that --recv-keys, --send-keys, and --search-keys will
+# communicate with to receive keys from, send keys to, and search for keys on
 keyserver hkps://hkps.pool.sks-keyservers.net
 
 # Provide a certificate store to override the system default
@@ -49,24 +42,28 @@ keyserver hkps://hkps.pool.sks-keyservers.net
 keyserver-options ca-cert-file=/usr/local/etc/ssl/certs/hkps.pool.sks-keyservers.net.pem
 
 # Set the proxy to use for HTTP and HKP keyservers
-keyserver-options http-proxy=socks5-hostname://127.0.0.1:9050
+#keyserver-options http-proxy=socks5-hostname://127.0.0.1:9050
 #keyserver-options http-proxy=http://127.0.0.1:8118/
 
 # https://trac.torproject.org/projects/tor/ticket/2846
 keyserver-options no-try-dns-srv
 
-# do not use preferred keyserver or key
+# When using --refresh-keys, if the key in question has a preferred keyserver
+# URL, then disable use of that preferred keyserver to refresh the key from
 keyserver-options no-honor-keyserver-url
 
 # This option enables the automatic retrieving of keys from a keyserver when
 # verifying signatures made by keys that are not on the local keyring
-keyserver-options auto-key-retrieve
+# Note that this option makes a "web bug" like behavior possible
+#keyserver-options auto-key-retrieve
 
-# include keys that are marked on the keyserver as disabled
-keyserver-options include-disabled
-
-# include keys that are marked on the keyserver as revoked
+# When searching for a key with --search-keys, include keys that are marked on
+# the keyserver as revoked
 keyserver-options include-revoked
+
+# When searching for a key with --search-keys, include keys that are marked on
+# the keyserver as disabled
+keyserver-options include-disabled
 
 
 #-----------------------------
@@ -74,12 +71,12 @@ keyserver-options include-revoked
 # http://www.apache.org/dev/openpgp.html#sha-defaults
 #-----------------------------
 
-# personal digest preferences
-personal-digest-preferences SHA512
+# Set the list of personal digest preferences to string
+personal-digest-preferences SHA512 SHA384 SHA256 SHA224
 
 # message digest algorithm used when signing a key
 cert-digest-algo SHA512
 
-# Set the list of default preferences to string
-# used for new keys and default for "setpref"
+# This preference list is used for new keys and becomes the default for
+# "setpref" in the edit menu
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
