gpg.conf: add header, change default-key to gnupg relase key, re-add no-emit-version and no-comments, add use-agent

--- a/gpg.conf
+++ b/gpg.conf
@@ -1,16 +1,28 @@
+#
+# This is an implementation of the Riseup OpenPGP Best Practices
+# https://help.riseup.net/en/security/message-security/openpgp/gpg-best-practices
+#
+
+
 #-----------------------------
 # default key
 #-----------------------------
 
-# Use name as the default key to sign with. If this option is not used, the
-# default key is the first key found in the secret keyring
+# The default key to sign with. If this option is not used, the default key is
+# the first key found in the secret keyring
 
-#default-key 0x80615870F5BAD690333686D0F2AD85AC1E42B367
+#default-key 0xD8692123C4065DEA5E0F3AB5249B39D24F25E3B6
 
 
 #-----------------------------
 # behavior
 #-----------------------------
+
+# disable inclusion of the version string in ASCII armored output
+no-emit-version
+
+# disable comment string in clear text signatures and ASCII armored messages
+no-comments
 
 # Disable all checks on the form of the user ID while generating a new one
 allow-freeform-uid
@@ -28,6 +40,10 @@ verify-options show-uid-validity
 # Disable inclusion of the version string in ASCII armored output
 no-emit-version
 
+# Try to use the GnuPG-Agent. With this option, GnuPG first tries to connect to
+# the agent before it asks for a passphrase.
+use-agent
+
 
 #-----------------------------
 # keyserver
@@ -43,7 +59,6 @@ keyserver-options ca-cert-file=/usr/local/etc/ssl/certs/hkps.pool.sks-keyservers
 
 # Set the proxy to use for HTTP and HKP keyservers
 #keyserver-options http-proxy=socks5-hostname://127.0.0.1:9050
-#keyserver-options http-proxy=http://127.0.0.1:8118/
 
 # https://trac.torproject.org/projects/tor/ticket/2846
 keyserver-options no-try-dns-srv
@@ -53,8 +68,9 @@ keyserver-options no-try-dns-srv
 keyserver-options no-honor-keyserver-url
 
 # This option enables the automatic retrieving of keys from a keyserver when
-# verifying signatures made by keys that are not on the local keyring
-# Note that this option makes a "web bug" like behavior possible
+# verifying signatures made by keys that are not on the local keyring.
+# Note that this option makes a "web bug" like behavior possible, so if you use
+# it be sure to use Tor, preferrably with IsolateDestPort and IsolateDestAddr
 #keyserver-options auto-key-retrieve
 
 # When searching for a key with --search-keys, include keys that are marked on
