gpg.conf: improve Tor comments

--- a/gpg.conf
+++ b/gpg.conf
@@ -54,7 +54,11 @@ keyserver hkps://hkps.pool.sks-keyservers.net
 # https://sks-keyservers.net/sks-keyservers.netCA.pem
 keyserver-options ca-cert-file=/usr/local/etc/ssl/certs/hkps.pool.sks-keyservers.net.pem
 
-# Set the proxy to use for HTTP and HKP keyservers
+# Set the proxy to use for HTTP and HKP keyservers - default to the standard
+# local Tor socks proxy
+# It is encouraged to use Tor for improved anonymity. Preferrably use either a
+# dedicated SOCKSPort for GnuPG and/or enable IsolateDestPort and
+# IsolateDestAddr
 #keyserver-options http-proxy=socks5-hostname://127.0.0.1:9050
 
 # https://trac.torproject.org/projects/tor/ticket/2846
@@ -67,7 +71,7 @@ keyserver-options no-honor-keyserver-url
 # This option enables the automatic retrieving of keys from a keyserver when
 # verifying signatures made by keys that are not on the local keyring.
 # Note that this option makes a "web bug" like behavior possible, so if you use
-# it be sure to use Tor, preferrably with IsolateDestPort and IsolateDestAddr
+# it be sure to enable Tor above.
 #keyserver-options auto-key-retrieve
 
 # When searching for a key with --search-keys, include keys that are marked on
