gpg.conf: drop allow-freeform-uid and keyserver-options auto-key-retrieve, include-disabled

--- a/gpg.conf
+++ b/gpg.conf
@@ -24,9 +24,6 @@ no-emit-version
 # disable comment string in clear text signatures and ASCII armored messages
 no-comments
 
-# Disable all checks on the form of the user ID while generating a new one
-allow-freeform-uid
-
 # Display long key IDs
 keyid-format 0xlong
 
@@ -61,6 +58,7 @@ keyserver-options ca-cert-file=/usr/local/etc/ssl/certs/hkps.pool.sks-keyservers
 # IsolateDestAddr
 #keyserver-options http-proxy=socks5-hostname://127.0.0.1:9050
 
+# Don't leak DNS
 # https://trac.torproject.org/projects/tor/ticket/2846
 keyserver-options no-try-dns-srv
 
@@ -68,19 +66,9 @@ keyserver-options no-try-dns-srv
 # URL, then disable use of that preferred keyserver to refresh the key from
 keyserver-options no-honor-keyserver-url
 
-# This option enables the automatic retrieving of keys from a keyserver when
-# verifying signatures made by keys that are not on the local keyring.
-# Note that this option makes a "web bug" like behavior possible, so if you use
-# it be sure to enable Tor above.
-#keyserver-options auto-key-retrieve
-
 # When searching for a key with --search-keys, include keys that are marked on
 # the keyserver as revoked
 keyserver-options include-revoked
-
-# When searching for a key with --search-keys, include keys that are marked on
-# the keyserver as disabled
-keyserver-options include-disabled
 
 
 #-----------------------------
