gpg.conf: add personal-cipher-preferences, pedantry

--- a/gpg.conf
+++ b/gpg.conf
@@ -18,10 +18,10 @@
 # behavior
 #-----------------------------
 
-# disable inclusion of the version string in ASCII armored output
+# Disable inclusion of the version string in ASCII armored output
 no-emit-version
 
-# disable comment string in clear text signatures and ASCII armored messages
+# Disable comment string in clear text signatures and ASCII armored messages
 no-comments
 
 # Display long key IDs
@@ -48,7 +48,7 @@ use-agent
 keyserver hkps://hkps.pool.sks-keyservers.net
 
 # Provide a certificate store to override the system default
-# https://sks-keyservers.net/sks-keyservers.netCA.pem
+# Get this from https://sks-keyservers.net/sks-keyservers.netCA.pem
 keyserver-options ca-cert-file=/usr/local/etc/ssl/certs/hkps.pool.sks-keyservers.net.pem
 
 # Set the proxy to use for HTTP and HKP keyservers - default to the standard
@@ -58,8 +58,7 @@ keyserver-options ca-cert-file=/usr/local/etc/ssl/certs/hkps.pool.sks-keyservers
 # IsolateDestAddr
 #keyserver-options http-proxy=socks5-hostname://127.0.0.1:9050
 
-# Don't leak DNS
-# https://trac.torproject.org/projects/tor/ticket/2846
+# Don't leak DNS, see https://trac.torproject.org/projects/tor/ticket/2846
 keyserver-options no-try-dns-srv
 
 # When using --refresh-keys, if the key in question has a preferred keyserver
@@ -72,11 +71,15 @@ keyserver-options include-revoked
 
 
 #-----------------------------
-# algorithms
-# http://www.apache.org/dev/openpgp.html#sha-defaults
+# algorithm and ciphers
 #-----------------------------
 
-# Set the list of personal digest preferences to string
+# list of personal digest preferences. When multiple digests are supported by
+# all recipients, choose the strongest one
+personal-cipher-preferences AES256 AES192 AES CAST5
+
+# list of personal digest preferences. When multiple ciphers are supported by
+# all recipients, choose the strongest one
 personal-digest-preferences SHA512 SHA384 SHA256 SHA224
 
 # message digest algorithm used when signing a key
